content/pt-br/devops/kubernetes/ckad/services_and_networking/pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: java-webapp
  labels:
    app: java-webapp
    tier: frontend
spec:
  containers:
    - name: java-webapp
      image: rotoku/java-webapp:latest
      ports:
        - containerPort: 8080
