content/pt-br/devops/kubernetes/ckad/services_and_networking/service-definition-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp-service
  labels:
    app: java-webapp
    tier: frontend
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080 ## port in pod
      port: 8080 ## port for service match port pod
  selector:
    app: java-webapp
    tier: frontend
