content/pt-br/devops/kubernetes/ckad/services_and_networking/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp-service
  labels:
    app: java-webapp
    tier: frontend
spec:
  type: NodePort
  ports:
    - targetPort: 8080 ## port in pod
      port: 8080 ## port for service match port pod
      nodePort: 30008 ## port expose externally
  selector:
    app: java-webapp
    tier: frontend
