content/pt-br/devops/kubernetes/ckad/services_and_networking/ingress-wear-watch-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wear-watch-host
spec:
  rules:
    - host: wear.my-online-store.com ## domain names ou hostname
      http:
        paths:
          - pathType: Prefix
            path: /wear
            backend:              
              service:
                name: wear-service
                port:
                  number: 80
    - host: watch.my-online-store.com
      http:
        paths:
          - pathType: Prefix
            path: /watch
            backend:              
              service:
                name: watch-service
                port:
                  number: 80
